--- a/app/globals.css
+++ b/app/globals.css
@@ -116,14 +116,15 @@
     * {
         @apply border-border outline-ring/50;
     }
-
     body {
         @apply bg-background text-foreground;
     }
 }
 
-body {
-    background: var(--background);
-    color: var(--foreground);
-    font-family: Arial, Helvetica, sans-serif;
+@utility gradient {
+    @apply bg-gradient-to-r from-green-600 to-teal-500;
+}
+
+@utility gradient-title {
+    @apply gradient font-extrabold tracking-tighter text-transparent bg-clip-text pb-2 pr-2;
 }
